--- a/index.htm
+++ b/index.htm
@@ -12,8 +12,18 @@
 
 Bezemkruiskruid heeft stengels die rechtop groeien en tot 1,5 meter hoog kunnen worden. De bladeren zijn geveerd en hebben een grijsgroene kleur. De bloemen zijn geel en vormen samen ronde bloeiwijzen die aan het einde van de stengels groeien. De bloeitijd is van juni tot september.
 
-Hoewel bezemkruiskruid een mooie plant is, bevat het pyrrolizidine-alkaloïden die giftig kunnen zijn voor mens en dier. Inname van deze stoffen kan leiden tot leverschade en in ernstige gevallen zelfs tot de dood. De plant wordt daarom vaak beschouwd als een onkruid en wordt bestreden op plaatsen waar dieren grazen.</p>
-      <h3></h3>
+Bezemkruiskruid bevat het pyrrolizidine-alkaloïden die giftig kunnen zijn voor mens en dier. Inname van deze stoffen kan leiden tot leverschade en in ernstige gevallen zelfs tot de dood. De plant wordt daarom vaak beschouwd als een onkruid en wordt bestreden op plaatsen waar dieren grazen.</p>
+      <h3>Geranium robertianum</h3>
+ <img src="https://waarnemingen.be/media/photo/2009058.jpg" />
+<p>Geranium robertianum, ook wel bekend als Robertskruid of Stinkende ooievaarsbek, is een inheemse plantensoort in Europa, Noord-Amerika en Azië. Het behoort tot de familie Geraniaceae en is een kruidachtige, vaste plant die tot 50 cm hoog kan worden.
+
+De plant heeft een rechtopstaande, vertakte stengel en geveerde bladeren met vijf tot zeven segmenten die diep ingesneden zijn. De bloemen zijn klein en roze of paars van kleur en groeien in clusters aan de uiteinden van de stengels. Na de bloei vormt de plant kleine, opvallende vruchten die lijken op een snavel van een ooievaar.
+
+Geranium robertianum heeft een lange geschiedenis als medicinale plant en werd traditioneel gebruikt om verschillende kwalen te behandelen, zoals wonden, maagklachten, diarree en aandoeningen van de luchtwegen. De plant bevat diverse actieve stoffen zoals looistoffen, flavonoïden, etherische oliën en tanninen die mogelijk bijdragen aan de geneeskrachtige werking.
+
+Tegenwoordig wordt Geranium robertianum nog steeds gebruikt als medicinale plant in de volksgeneeskunde en in homeopathische middelen. Het wordt ook vaak gebruikt in cosmetica en huidverzorgingsproducten vanwege de antibacteriële en ontstekingsremmende eigenschappen.
+
+Geranium robertianum groeit het best op vochtige, voedselrijke grond en kan worden gevonden in bossen, weilanden, langs wegen en in stedelijke gebieden. Het is een veelvoorkomende plant en wordt vaak beschouwd als een onkruid. De plant kan zich snel verspreiden door middel van zaadjes en kan worden geplukt voor gebruik als medicinaal kruid. Echter, het is belangrijk om te weten dat Geranium robertianum ook giftig kan zijn bij overmatige consumptie en dat het gebruik ervan in medicinale toepassingen altijd moet worden overlegd met een gekwalificeerde zorgverlener.</p>
       <ul>
         <li></li>
         <li></li>
